# cuda-zkp-ntt

./: .gitignore  CLAUDE.md  CMakeLists.txt  GUIDE.md  NTT_OPTIMIZATION_ROADMAP.md  README.md  analysis.md  ff_arithmetic.cuh  profile_ntt.sh
.github/workflows/: build.yml
benchmarks/: bench_groth16.cu  bench_msm.cu  bench_multifield.cu  bench_ntt.cu  ff_microbench.cu
include/: cuda_utils.cuh  ec_g1.cuh  ec_g2.cuh  ff_arithmetic.cuh  ff_babybear.cuh  ff_barrett.cuh  ff_fq.cuh  ff_fq12.cuh  ff_fq2.cuh  ff_fq6.cuh  ff_goldilocks.cuh  ff_plantard.cuh  groth16.cuh  msm.cuh  ntt.cuh  ntt_babybear.cuh  ntt_goldilocks.cuh  pairing.cuh  pipeline.cuh  poly_ops.cuh  twiddle_otf.cuh
profiling/: README.md
profiling/scripts/: collect_metrics.sh  l2_diagnostic.ps1  l2_diagnostic.sh  nsys_timeline.sh
results/: analysis.md  analysis_v200.md
results/data/: bench_msm_v210_s26.json  bench_msm_v210_s27.json  bench_msm_v210_s28.json  bench_v120.json  bench_v130.json  bench_v140.json  bench_v140_s10.json  bench_v140_s9.json  bench_v150.json  bench_v150_s13.json  bench_v150_s14.json  bench_v160.json  bench_v200_groth16.json  bench_v200_msm.json  bench_v220_batch.json  bench_v220_fibonacci.json
scripts/: plot_benchmarks.py  plot_groth16.py
src/: benchmark.cu  ec_kernels.cu  ff_fq_kernels.cu  ff_mul.cu  ff_multi_field.cu  groth16.cu  msm.cu  ntt_4step.cu  ntt_async.cu  ntt_babybear.cu  ntt_babybear_tc.cu  ntt_fused_kernels.cu  ntt_goldilocks.cu  ntt_naive.cu  ntt_optimized.cu  pairing_kernels.cu  poly_ops.cu
tests/: ff_reference.h  test_correctness.cu
